# ROS_YOLOV10_ViT_material_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  material_detection.launch  package.xml  requirements.txt  webcam_pub.py  yolo_vit_mat_detector.py
Simulation_and_log/: log.txt
launch/: material_detection.launch
msg/: MaterialDetected.msg
scripts/: webcam_pub.py  webcam_sub.py  yolo_vit_mat_detector.py
