<?xml version="1.0"?>
<package format="2">
  <name>vit_inference</name>
  <version>0.0.0</version>
  <description>The vit_inference package</description>
  <maintainer email="songioana@gmail.com">Ioana Song</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/IoanaSong/ROS_YOLOV10_ViT_material_detection/tree/main</url>
  <author email="songioana@gmail.com">Ioana Song</author>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv2</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-opencv</exec_depend>

</package>
